<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".start"
    android:background="@mipmap/background02"
    android:id="@+id/record">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="76dp"
        android:background="@mipmap/logo01"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/inputname"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputname"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sex"
        android:id="@+id/textView3"
        android:layout_below="@+id/inputname"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/textView4"
        android:textColor="@color/black"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/age"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textIsSelectable="false"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startconfirm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/buttonstart05"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="65dp"
        android:onClick="SPinput"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/radioGroup1"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexm"
            android:id="@+id/sexmale"
            android:checked="false"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/inputname" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexf"
            android:id="@+id/sexfemale"
            android:layout_alignTop="@+id/sexmale"
            android:layout_toEndOf="@+id/sexmale"
            android:checked="false"
            android:layout_marginLeft="18dp" />
    </RadioGroup>

</RelativeLayout>
