<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xyib.consumption.more_foodnote"
    android:background="@mipmap/background04">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@mipmap/moreelemnt01"
        android:id="@+id/moresportelement">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportnote1"
            android:id="@+id/textView15"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/c1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportnote2"
            android:id="@+id/textView16"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportnote3"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportnote4"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/c1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportnote5"
            android:id="@+id/textView19"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moresportmore"
        android:layout_below="@+id/moresportelement"
        android:layout_alignStart="@+id/moresportelement"
        android:background="@mipmap/buttonmorebacktomore"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moresportmenu"
        android:layout_below="@+id/moresportelement"
        android:layout_alignEnd="@+id/moresportelement"
        android:background="@mipmap/buttonmorebacktomenu02"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp" />
</RelativeLayout>
