<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="60dp"
    android:padding="6dip">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:orientation="vertical"
        android:layout_marginTop="10dp">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:contentDescription="TODO"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/icon"
            android:textColor="@color/c1"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sporttime"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView1"
            android:layout_marginLeft="15dp"
            android:textColor="@color/c1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView5"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption"
            android:id="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/icon"
            android:textColor="@color/c1"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/textView7"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeunit"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginLeft="5dp"
            android:textColor="@color/c1" />

    </RelativeLayout>




</RelativeLayout>
