<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="300dp"

    android:background="@mipmap/dialogbackground"
    android:gravity="center_horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="180dp"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:background="@mipmap/dialogelement01"
        android:id="@+id/userchange">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:id="@+id/textView7"
                android:textSize="20sp"
                android:layout_marginTop="11dp"
                android:textColor="@color/c1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/cradioGroup1"
                android:orientation="horizontal"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexm"
                    android:id="@+id/csexmale"
                    android:checked="false"
                    android:layout_below="@+id/textView3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexf"
                    android:id="@+id/csexfemale"
                    android:layout_alignTop="@+id/csexmale"
                    android:layout_toEndOf="@+id/csexmale"
                    android:checked="false"
                    android:layout_marginLeft="18dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView8"
                android:textSize="20sp"
                android:textColor="@color/c1"
                android:layout_marginLeft="25dp"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:enabled="false" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/cage"
                android:layout_weight="0.22"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userchangecancel"
            android:focusableInTouchMode="false"
            android:background="@mipmap/userchangecancel"
            android:contentDescription="a" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userchangechange"
            android:background="@mipmap/userchangechange"
            android:focusableInTouchMode="false"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>